:icons: font

////
* Write changelog entries in present tense
* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.17.4]]
== 0.17.4 (TBD)

icon:plus[] Logging: The logging verbosity has been further decreased.

icon:check[] REST: Fix ETag generation for nodes.
                   Previously taking a node offline did not alter the ETag and this also lead to inconsistent status
                   information being displayed in the Mesh UI link:https://github.com/gentics/mesh/issues/345[#345]

[[v0.17.3]]
== 0.17.3 (15.03.2018)

icon:check[] UI: Restrict nodes to certain schema if allow is set in node list fields.

[[v0.17.2]]
== 0.17.2 (13.03.2018)

icon:plus[] Docker: A new volume location for the `config` directory has been added. You can now use the `/config` folder to mount your configuration files.

icon:plus[] Core: The Vert.x library has been downgraded to 3.5.0 due to a regression which could cause requests to not be handled by the HTTP Server.

[[v0.17.1]]
== 0.17.1 (08.03.2018)

icon:plus[] OrientDB: The included OrientDB version has been updated to version 2.2.33

icon:plus[] Core: The core Vert.x library was updated to version 3.5.1

icon:plus[] Config: It is now possible to configure the elasticsearch start-up timeout via the `search.startupTimeout` field in the `mesh.yml` or via the `MESH_ELASTICSEARCH_STARTUP_TIMEOUT` environment variable.

icon:plus[] Search: The reindex endpoint will now execute the reindex operation asynchronously.

icon:plus[] Search: Two new reindex specific events have been added: `mesh.search.reindex.failed`, `mesh.search.reindex.completed`.

icon:plus[] REST: The `GET /api/v1/search/status` endpoint response has been updated. The `reindexRunning` flag has been added.
