@@ -1,5 +1,7 @@
 FROM    java:openjdk-8-jre-alpine
 
+ENV ESVERSION 6.1.2
+
 EXPOSE 8080
 
 RUN adduser -D -u 1000 -h /mesh mesh
@@ -11,7 +13,22 @@ USER root
 RUN mkdir /data   && chown mesh: /data -R   && ln -s /data /mesh/data
 RUN mkdir /config && chown mesh: /config -R && ln -s /config /mesh/config
 
+ADD https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$ESVERSION.zip /es.zip
+
+WORKDIR /
+RUN apk --update --no-cache add unzip \
+    && unzip /es.zip && apk del unzip \
+    && mv elasticsearch* elasticsearch \
+    && rm /es.zip \
+    && ln -s /elasticsearch /mesh/elasticsearch \
+    && mkdir -p /elasticsearch/data \
+    && chown mesh: /elasticsearch -R
+
 USER mesh
+WORKDIR /mesh
 VOLUME /data
 VOLUME /config
+VOLUME /elasticsearch/data
+VOLUME /elasticsearch/config
+
 CMD [ "java", "-jar" , "mesh.jar" ]
